<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addfile"
        android:clickable="true"
        android:onClick="onAddFileClick"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrieve" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:onClick="onSettingsClick" />

    <TextView
        android:id="@+id/about"
        android:layout_width="fill_parent"
        android:layout_height="247dp"
        android:layout_gravity="bottom"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>